class Comment {
  date = new Date()
  constructor(author, comment) {
    this.author = author
    this.comment = comment
  }
}

module.exports = Comment
