class Post {
  constructor(date, hour, message) {
    this.date = date
    this.hour = hour
    this.message = message
  }
}

module.exports = Post
