@startuml DW Messenger
  class User {
  email: string
  posts: array
  followerEmail: string
  followedUserEmail: string
  set UserProfile(name, nickname, description, profilePicture)
  createPost(message)
  deletePost(message)
  }
  class UserProfile {
    name: string
    nickname: string
    description: string
    profilePicture: string
    createProfile(nickname, description, profilePicture)
  }

  class Post{
    content: string
    image: string
    postDate: date
    expirationPate: date
    lifetimeExtension: int
  }
  class Comment{
    userEmail: int
    content: string
    commentDate: date
    addComment(content): void
  }


  User <--> UserProfile
  User --* Post
  Post --* Comment
@enduml


' User ↔ UserProfile (Association) - User has one UserProfile, and UserProfile belongs to one User
' User --o Relationship (Composition) - Users can have multiple relationships (follows/followers).
' User --o Post (Composition) - User can create multiple posts expressing emotions.
' Post --o Comment (Composition) - A post can have multiple comments.
